--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
 "kartik-v/yii2-grid": "*",
 "kartik-v/yii2-export": "*",
 "kartik-v/yii2-mpdf": "*",
-"yiisoft/yii2-jui": "~2.0.0"
+"yiisoft/yii2-jui": "~2.0.0",
+        "dektrium/yii2-user": "0.9.*@dev"
     },
     "require-dev": {
         "yiisoft/yii2-codeception": "*",
